--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,10 +1,17 @@
 .container.profilePage
   .profilePage_user
     .profilePage_user_image
-      = image_tag 'default-avatar.png'
+      = image_tag current_user.avatar_image
     .profilePage_user_basicInfo
       .profilePage_user_name
         .profilePage_user_displayName
           = current_user.username
       .profilePage_user_introduction
         あああああああああああああああああああああああああああああああああああああああああああああああああああああ
+
+= form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
+  %div
+    =f.label :avatar, 'avatar'
+  %div
+    = f.file_field :avatar
+  = f.submit '保存', class: 'btn-primary'
