--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -1,6 +1,26 @@
 .float_btn {
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  width: 64px;
+  height: 64px;
+  border-radius: 100%;
+  text-align: center;
+  background-color: blue;
+  color: white;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 
   i {
-
+    margin-top: 22px;
   }
+}
+
+.btn-primary {
+  background-color: blue;
+  border: none;
+  width: 100%;
+  text-align: center;
+  color: white;
+  padding: 16px 0;
+  font-weight: bold;
 }
