--- a/app/views/photos/new.html.haml
+++ b/app/views/photos/new.html.haml
@@ -1,4 +1,8 @@
 .container
+  %ul
+    - @photo.errors.full_messages.each do |message|
+      %li= message
+
   = form_with(model: @photo, url: photos_path, method: 'post', local: true) do |f|
     %div
       = f.label :content, '内容'
