--- a/app/views/photos/new.html.haml
+++ b/app/views/photos/new.html.haml
@@ -5,6 +5,10 @@
 
   = form_with(model: @photo, url: photos_path, method: 'post', local: true) do |f|
     %div
+      = f.label :pics, 'フォト'
+    %div
+      = f.file_field :pics, multiple: true
+    %div
       = f.label :content, '内容'
     %div
       = f.text_area :content
