--- a/app/views/photos/new.html.haml
+++ b/app/views/photos/new.html.haml
@@ -3,7 +3,7 @@
     - @photo.errors.full_messages.each do |message|
       %li= message
 
-  = form_with(model: @photo, url: photos_path, method: 'post', local: true) do |f|
+  = form_with(model: @photo, local: true) do |f|
     %div
       = f.label :pics, 'フォト'
     %div
