記事の投稿主の名前表記

--- a/app/views/photos/show.html.haml
+++ b/app/views/photos/show.html.haml
@@ -2,4 +2,6 @@
   - if @photo.pics.attached?
     .photo_pics
       = image_tag @photo.pics[0]
+  %p= photo.content
+  %p= photo.user.username
   %p= photo.display_created_at
