--- a/app/views/photos/index.html.haml
+++ b/app/views/photos/index.html.haml
@@ -7,6 +7,7 @@
             = image_tag photo.pics[0]
         .photo_content
           %p= photo.content
+          %p= photo.user.username
           %p= photo.display_created_at
 = link_to new_photo_path do
   .float_btn
