--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -1,3 +1,4 @@
+@import './variables';
 .float_btn {
   position: fixed;
   bottom: 16px;
@@ -23,4 +24,18 @@
   color: white;
   padding: 16px 0;
   font-weight: bold;
+}
+
+.btn {
+  &_sign {
+    width: 343px;
+    height: 48px;
+    background: #FFE600;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    text-align: center;
+    color: #000000;
+  }
 }
