--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,7 +1,14 @@
+@import 'variables';
 .header {
   display: flex;
   justify-content: space-between;
   font-weight: bold;
+
+  &_loginBtn {
+    border-radius: 8px;
+    font-size: 12px;
+    padding: 12px 16px;
+  }
 
   &_logos {
     min-width: 0;
@@ -9,7 +16,26 @@
 
     img {
       cursor: pointer;
-      
     }
+  }
+
+  &_pageTitle {
+    color: black;
+  }
+  &_avatar {
+    border-radius: 100%;
+  }
+
+  &_back {
+    width: 40px;
+    height: 30px;
+    background-color: #fff;
+  }
+
+  &_background {
+    width: 375px;
+    height: 298px;
+    left: 0px;
+    top: 0px;
   }
 }
