--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,8 +1,11 @@
 @import 'variables';
+
 .header {
   display: flex;
   justify-content: space-between;
   font-weight: bold;
+  background-color: $base-bg-color;
+  height: 60px;
 
   &_loginBtn {
     border-radius: 8px;
@@ -22,8 +25,14 @@
   &_pageTitle {
     color: black;
   }
+
   &_avatar {
+    position: fixed;
     border-radius: 100%;
+    right: 5px;
+    top: 5px;
+    height: 40px;
+    width: 40px;
   }
 
   &_back {
@@ -38,4 +47,12 @@
     left: 0px;
     top: 0px;
   }
+}
+
+.camera {
+  position: fixed;
+  top: 5px;
+  left: 5px;
+  width: 40px;
+  height: 40px;
 }
