--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,12 +16,14 @@
           - if !current_page?(root_path)
             = link_to :back do
               = image_tag 'back.png', class: 'header_back'
-          %p.header_pageTitle ronstagram
+          - if current_page?(root_path)
+            = link_to new_photo_path do
+              = image_tag 'camera.png', class: 'camera'
         - if user_signed_in?
           .dropdown
-            = image_tag 'default-avatar.png', class: 'header_avatar dropbtn'
+            = image_tag 'default-avatar.png', class: 'header_avatar'
             .dropdown-content
-              %a{:href => "#"} プロフィール
+              = link_to 'プロフィール', profile_path
               = link_to 'ログアウト', destroy_user_session_path, data: { method: 'delete' }
         - else
           = link_to 'ログイン', new_user_session_path, class: 'header_loginBtn'
