--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,11 +1,13 @@
 @import 'variables';
 
 .header {
+  position: fixed;
   display: flex;
   justify-content: space-between;
   font-weight: bold;
   background-color: $base-bg-color;
-  height: 60px;
+  padding: 10px 16px;
+  width: 100%;
 
   &_loginBtn {
     border-radius: 8px;
@@ -27,10 +29,9 @@
   }
 
   &_avatar {
-    position: fixed;
+    display: flex;
     border-radius: 100%;
-    right: 5px;
-    top: 5px;
+    margin: 0 10px;
     height: 40px;
     width: 40px;
   }
