--- a/app/assets/stylesheets/photo.scss
+++ b/app/assets/stylesheets/photo.scss
@@ -1,57 +1,77 @@
 .photo {
-  position: relative;
   height: 360px;
+  margin-top: 40px;
+
   &_pics {
-    position: relative;
-    margin-top: 11px;
-    height: 225px;
+    margin-top: 0px;
     overflow: hidden;
+
     &_3 {
+      display: grid;
+      grid-template-rows: 109px 109px;
+      grid-template-columns: 2fr 1fr;
+
       &_first {
+        grid-row: 1 / 3;
+        grid-column: 1 / 2;
+
         img {
-          position: absolute;
-          left: 0px;
-          width: 59%;
+          width: 100%;
+          height: 100%;
         }
       }
+
       &_second {
+
         img {
-          position: absolute;
-          right: 0px;
-          width: 40%;
-          height: 50%;
+          width: 100%;
+          height: 100%;
         }
       }
+
       &_third {
+
         img {
-          position: absolute;
-          bottom: 0px;
-          right: 0px;
-          width: 40%;
-          height: 49%;
+          width: 100%;
+          height: 100%;
         }
       }
     }
 
     &_2 {
+      display: grid;
+      grid-template-rows: 218px;
+      grid-template-columns: 1fr 1fr;
+
       &_first {
+        grid-column: 1 / 2;
+
         img {
-          position: absolute;
-          left: 0px;
-          width: 50%;
+          width: 100%;
+          height: 100%;
         }
       }
+
       &_second {
+
         img {
-          position: absolute;
-          right: 0px;
-          width: 49%;
+          width: 100%;
+          height: 100%;
         }
       }
     }
 
     &_1 {
+      display: grid;
+      grid-template-rows: 218px;
+      grid-template-columns: 1fr;
+
       &_first {
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
@@ -59,7 +79,7 @@
   &_user {
   }
   &_content {
-    position: absolute;
+
     bottom: 10px;
   }
 }
