--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
       %header.header
         .header_logos
           - if !current_page?(root_path)
-            = link_to :back do
+            = link_to 'javascript:history.back()' do
               = image_tag 'back.png', class: 'header_back'
           - if current_page?(root_path)
             = link_to new_photo_path do
