いいね機能実装,ajax導入

--- a/app/views/photos/index.html.haml
+++ b/app/views/photos/index.html.haml
@@ -25,4 +25,5 @@
                 = image_tag photo.pics.first
         .photo_content
           %span= photo.comment_count
+          %span= photo.like_count
           %p.photo_detail= photo.content
