--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -13,6 +13,10 @@ textarea {
   min-height: 440px;
   resize: vertical;
   border: 1px solid #EBEBEB;
+
+  &.sm {
+    min-height: 160px;
+  }
 }
 
 input, select {
