--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import 'flash';
 @import 'header';
 @import 'common';
+@import 'comment';
 
 html {
   word-spacing: 1px;
@@ -38,6 +39,7 @@ body {
 .container {
   padding: 16px 16px;
   width: 100%;
+  margin-top: 40px;
 }
 
 .hidden {
