--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -25,8 +25,10 @@
     }
   }
 
-  &_pageTitle {
-    color: black;
+  &_title {
+    margin-left: 50px;
+    display: flex;
+    margin-top: 10px;
   }
 
   &_avatar {
@@ -37,10 +39,11 @@
     width: 40px;
   }
 
-  &_back {
+  &_left {
+    position: fixed;
     margin: 0 10px;
     width: 40px;
-    height: 30px;
+    height: 40px;
     background-color: #fff;
   }
 
@@ -50,12 +53,4 @@
     left: 0px;
     top: 0px;
   }
-}
-
-.camera {
-  position: fixed;
-  top: 5px;
-  left: 5px;
-  width: 40px;
-  height: 40px;
 }
