--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,14 +1,5 @@
-.container.profilePage
-  .profilePage_user
-    .profilePage_user_basicInfo
-      .profilePage_user_name
-        .profilePage_user_displayName
-          = current_user.username
+- content_for(:title) { current_user.username }
+.container
+  .profilePage
     .profilePage_user_image
       = image_tag current_user.avatar_image
-
-
-= form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
-  %div
-    = f.file_field :avatar
-  = f.submit '保存', class: 'btn-primary'
