cssの変なとこ修正

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -2,49 +2,44 @@
 
 .header {
   position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
   display: flex;
   justify-content: space-between;
   font-weight: bold;
   background-color: $base-bg-color;
   padding: 10px 16px;
-  width: 100%;
-  top: 0px;
 
   &_loginBtn {
     border-radius: 8px;
     font-size: 12px;
-    padding: 12px 16px;
   }
 
-  &_logos {
-    min-width: 0;
+  &_left {
     display: flex;
 
     img {
+      width: 40px;
+      height: 40px;
       cursor: pointer;
     }
   }
 
   &_title {
-    margin-left: 50px;
+    margin: auto;
     display: flex;
-    margin-top: 10px;
   }
 
-  &_avatar {
+  &_right {
     display: flex;
     border-radius: 100%;
-    margin: 0 10px;
-    height: 40px;
-    width: 40px;
-  }
+    text-align: right;
 
-  &_left {
-    position: fixed;
-    margin: 0 10px;
-    width: 40px;
-    height: 40px;
-    background-color: #fff;
+    img {
+      height: 40px;
+      width: 40px;
+    }
   }
 
   &_background {
