--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,10 +1,1 @@
-- content_for(:title) { current_user.username }
-.container
-  .profilePage
-    .profilePage_user_image.show-profile-form
-      = image_tag current_user.avatar_image
-    .d
-      = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
-        .profile-file-area
-          = f.file_field :avatar
-        = f.submit '保存', class: 'btn-primary'
+= render 'commons/profile', user: current_user
