フォロワーリスト作成

--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -19,4 +19,5 @@
   .profilePage_following_count
     = link_to account_followings_path(user) do
       %p= user.followings_count
-    %p= user.followers_count
+    = link_to account_follows_path(user) do
+      %p= user.followers_count
