フォローリスト、フォロワーリストcommonに移動

--- a/app/views/followings/index.html.haml
+++ b/app/views/followings/index.html.haml
@@ -1,4 +1,3 @@
 .container
   - @followings.each do |following|
-    .photo_top_avatar
-      = image_tag following.avatar_image
+    = render 'commons/follow', follow: following
