--- a/app/views/follows/index.html.haml
+++ b/app/views/follows/index.html.haml
@@ -1,4 +1,3 @@
 .container
   - @followers.each do |followers|
-    .photo_top_avatar
-      = image_tag followers.avatar_image
+    = render 'commons/follow', follow: followers
