--- a/app/views/commons/_follow.html.haml
+++ b/app/views/commons/_follow.html.haml
@@ -1,5 +1,5 @@
 .follow_card
-  .photo_top_avatar
+  .follow_avatar
     = image_tag follow.avatar_image
-  .photo_top_user
-    = follow.username
+    .follow_username
+      = follow.username
