--- a/app/views/followings/index.html.haml
+++ b/app/views/followings/index.html.haml
@@ -1,3 +1,4 @@
+- content_for(:title) { 'Follow-List' }
 .container
   - @followings.each do |following|
     = render 'commons/follow', follow: following
