--- a/app/views/follows/index.html.haml
+++ b/app/views/follows/index.html.haml
@@ -1,3 +1,4 @@
+- content_for(:title) { 'Follower-List' }
 .container
   - @followers.each do |followers|
     = render 'commons/follow', follow: followers
