--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -12,10 +12,10 @@
                 = f.file_field :avatar
               = f.submit '保存', class: 'btn-primary'
         - else
-          - if current_user&.has_followed?(user)
-            = link_to 'Unfollow', account_unfollows_path(user), data: {method: 'post'}
-          - else
-            = link_to 'Follow', account_follows_path(user), data: {method: 'post'}
+          .profilePage_followbtn_following.hidden.following
+            %p Following
+          .profilePage_followbtn_unfollowing.hidden.unfollowing
+            %p Follow
   .profilePage_following_count
     = link_to account_followings_path(user) do
       %p= user.followings_count
