フォロー、アンフォローをajaxで処理

--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -14,7 +14,7 @@
         - else
           .profilePage_followbtn_following.hidden.following
             %p Following
-          .profilePage_followbtn_unfollowing.hidden.unfollowing
+          .profilePage_followbtn_unfollowing.hidden.follow
             %p Follow
   .profilePage_following_count
     = link_to account_followings_path(user) do
