--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,17 +16,22 @@
           - if !current_page?(root_path)
             = link_to 'javascript:history.back()' do
               = image_tag 'back.png'
-          - if current_page?(root_path)
+          - else
             = link_to new_photo_path do
               = image_tag 'camera.png'
         .header_title= content_for?(:title) ? yield(:title) : "Ronstagram"
         .header_right
           - if user_signed_in?
-            .dropdown
-              = image_tag current_user.avatar_image
-              .dropdown-content
-                = link_to 'プロフィール', profile_path
-                = link_to 'ログアウト', destroy_user_session_path, data: { method: 'delete' }
+            - if current_page?(profile_path)
+              .timeline-btn
+                = link_to timeline_path do
+                  %p= 'timeline'
+            - else
+              .dropdown
+                = image_tag current_user.avatar_image
+                .dropdown-content
+                  = link_to 'プロフィール', profile_path
+                  = link_to 'ログアウト', destroy_user_session_path, data: { method: 'delete' }
           - else
             = link_to 'ログイン', new_user_session_path, class: 'header_loginBtn'
     - if flash.present?
