commentを別のjsに移動

--- a/app/views/photos/show.html.haml
+++ b/app/views/photos/show.html.haml
@@ -8,4 +8,5 @@
     = text_area_tag :comment_content, '', class: 'sm'
     .btn_secondary.add-comment-button
       = image_tag 'Vector.png', class: 'vector'
-= javascript_pack_tag 'photo'
+
+= javascript_pack_tag 'comment'
