indexのコメントマーク押したらshowページに遷移するテスト成功

--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -1,4 +1,4 @@
-- content_for(:title) { current_user.username }
+- content_for(:title) { user.username }
 .profilePage
   .profilePage_image.show-profile-form
     = image_tag user.avatar_image
