--- a/app/views/photos/show.html.haml
+++ b/app/views/photos/show.html.haml
@@ -8,5 +8,6 @@
     = text_area_tag :comment_content, '', class: 'sm'
     .btn_secondary.add-comment-button
       = image_tag 'Vector.png', class: 'vector'
+  -# %p= 'Test'
 
 = javascript_pack_tag 'comment'
