--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   font-weight: bold;
   padding: 10px 16px;
+  background-color: white;
 
   &_loginBtn {
     border-radius: 8px;
