--- a/app/views/commons/_photo.html.haml
+++ b/app/views/commons/_photo.html.haml
@@ -7,24 +7,7 @@
       %p.photo_top_user= photo.user.username
       %p.photo_top_created= photo.display_created_at
     .photo_pics
-      - if photo.pics.first && photo.pics.second && photo.pics.third
-        .photo_pics_3
-          .photo_pics_3_first
-            = image_tag photo.pics.first
-          .photo_pics_3_second
-            = image_tag photo.pics.second
-          .photo_pics_3_third
-            = image_tag photo.pics.third
-      - elsif photo.pics.first && photo.pics.second
-        .photo_pics_2
-          .photo_pics_2_first
-            = image_tag photo.pics.first
-          .photo_pics_2_second
-            = image_tag photo.pics.second
-      - else photo.pics.first
-        .photo_pics_1
-          .photo_pics_1_first
-            = image_tag photo.pics.first
+      = render 'commons/pics', photo: photo
     .photo_bottom
       - if user_signed_in?
         .photo_bottom_heart.hidden.active-heart
