--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -6,19 +6,14 @@ $image_size: 56px;
   &_image {
     text-align: center;
     img {
-
       width: $image_size;
       height: $image_size;
     }
   }
 
-  &_actionButton {
-    margin-top: 50px;
-  }
-
   &_count {
     display: flex;
-    margin-top: 40px;
+    margin: 20px 0px;
 
     &_photos {
       text-align: center;
