--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -1,34 +1,34 @@
 - content_for(:title) { user.username }
 .profilePage
-  .profilePage_image.show-profile-form
+  .profilePage_image
     = image_tag user.avatar_image
+    .profilePage_actionButton#follow-form
+      - if user == current_user
+        .profilePage_image_change
+          = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
+            .profile-file-area
+              = f.file_field :avatar
+            = f.submit 'アバター画像を更新', class: 'btn-primary'
+      - else
+        .profilePage_followbtn_following.hidden.following
+          %p UnFollow
+        .profilePage_followbtn_follow.hidden.follow
+          %p Follow
   .profilePage_count
     .profilePage_count_photos
       .count
         %p= user.photos_count
       .count_title
         %p= 'Photos'
-    .profilePage_count_following#follower_count
+    .profilePage_count_following
       = link_to account_followings_path(user) do
         .count
-          %p= user.followings_count
+          %p= user.followings.count
         .count_title
           %p= 'Following'
-    .profilePage_count_follower#follower_count
+    .profilePage_count_follower
       = link_to account_follows_path(user) do
-        .count
-          %p= user.followers_count
+        .count#follower_count
+          %p= user.followers.count
         .count_title
           %p= 'Follower'
-  .profilePage_actionButton#follow-form
-    - if user == current_user
-      .profilePage_image_change
-        = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
-          .profile-file-area
-            = f.file_field :avatar
-          = f.submit 'アバター画像を更新', class: 'btn-primary'
-    - else
-      .profilePage_followbtn_following.hidden.following
-        %p Following
-      .profilePage_followbtn_unfollowing.hidden.follow
-        %p Follow
