--- a/app/views/photos/index.html.haml
+++ b/app/views/photos/index.html.haml
@@ -30,7 +30,7 @@
         = render 'commons/likes', photo: photo
         .photo_bottom_comment
           = link_to photo_path(photo) do
-            = image_tag 'Vector.png', class: 'vector'
+            = image_tag 'comment.png'
         %span.photo_bottom_comment_count= photo.comment_count
         .twitter
           = link_to "https://twitter.com/share?url=#{request.url}", title: 'Twitter', target: '_blank' do
