プロフィール画面のボタンscss調整。キャンセルボタン追加。

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -1,12 +1,13 @@
 @import './variables';
 
 .btn-primary {
-  background-color: blue;
+  background-color: black;
   border: none;
-  width: 100%;
+  border-radius: 2px;
+  height: 20px;
+  width: 60px;
   text-align: center;
   color: white;
-  padding: 16px 0;
   font-weight: bold;
 }
 
