--- a/app/views/photos/index.html.haml
+++ b/app/views/photos/index.html.haml
@@ -1,48 +1,3 @@
 .container
-  - @photos.each do |photo|
-    .photo#photo-show{data: {photo_id: photo.id}}
-      .photo_top
-        .photo_top_avatar
-          = link_to account_path(photo.user) do
-            = image_tag photo.user.avatar_image
-        %p.photo_top_user= photo.user.username
-        %p.photo_top_created= photo.display_created_at
-      .photo_pics
-        - if photo.pics.first && photo.pics.second && photo.pics.third
-          .photo_pics_3
-            .photo_pics_3_first
-              = image_tag photo.pics.first
-            .photo_pics_3_second
-              = image_tag photo.pics.second
-            .photo_pics_3_third
-              = image_tag photo.pics.third
-        - elsif photo.pics.first && photo.pics.second
-          .photo_pics_2
-            .photo_pics_2_first
-              = image_tag photo.pics.first
-            .photo_pics_2_second
-              = image_tag photo.pics.second
-        - else photo.pics.first
-          .photo_pics_1
-            .photo_pics_1_first
-              = image_tag photo.pics.first
-      .photo_bottom
-        = render 'commons/likes', photo: photo
-        .photo_bottom_comment
-          = link_to photo_path(photo) do
-            = image_tag 'comment.png'
-        %span.photo_bottom_comment_count= photo.comment_count
-        .twitter
-          = link_to "https://twitter.com/share?url=#{request.url}", title: 'Twitter', target: '_blank' do
-            .twitter-btn
-              = image_tag 'Twitter.png'
-        - if user_signed_in? && current_user.has_written?(photo)
-          .action
-            .dropdown
-              = image_tag 'actions.svg'
-              .dropdown-content.mini
-                = link_to '編集する', edit_photo_path(photo)
-                = link_to '削除する', photo_path(photo), data: { method: 'delete', confirm: '本当に削除してもよろしいですか？' }
-        %p.photo_bottom_detail= photo.content
-
+  = render 'commons/photo'
 = javascript_pack_tag 'photo'
