ログインボタン、TLボタンの位置修正

--- a/app/assets/stylesheets/comment.scss
+++ b/app/assets/stylesheets/comment.scss
@@ -29,3 +29,9 @@
 .comments-container {
   margin-bottom: 20px;
 }
+
+.photo_comment {
+  width: 100%;
+  word-break : break-all;
+  overflow: hidden;
+}
