--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
               .dropdown
                 = image_tag current_user.avatar_image
                 .dropdown-content
-                  = link_to 'Profile', profile_path
+                  = link_to 'Profile', profile_path, class: 'log_out'
                   = link_to 'Log_out', destroy_user_session_path, data: { method: 'delete' }, class: 'log_out'
           - else
             = link_to 'Log_in', new_user_session_path, class: 'header_loginBtn'
